--- a/DuplicatedApps/DuplicatedApps/Controller/WelcomeScreen/cell/WelcomeScreenSlideCollectionViewCell.xib
+++ b/DuplicatedApps/DuplicatedApps/Controller/WelcomeScreen/cell/WelcomeScreenSlideCollectionViewCell.xib
@@ -7,28 +7,53 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Inter-Medium.ttf">
+            <string>Inter-Medium</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="WelcomeScreenSlideCollectionViewCell" id="gTV-IL-0wX" customClass="WelcomeScreenSlideCollectionViewCell" customModule="DuplicatedApps" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="622.66666666666663"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="622"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="622.66666666666663"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="622"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C4s-Rh-clN">
-                        <rect key="frame" x="186" y="301" width="76" height="39"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="32"/>
-                        <nil key="textColor"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="homescreen-item" translatesAutoresizingMaskIntoConstraints="NO" id="9rw-Lh-6UR">
+                        <rect key="frame" x="10" y="100" width="394" height="221"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="221" id="cT5-hE-qMQ"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duplicate Apps: Call History, Notes, and more " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j8C-jk-PZe">
+                        <rect key="frame" x="75" y="351" width="264" height="94.666666666666686"/>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="264" id="MHg-ZI-1y7"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="Inter-Medium" family="Inter" pointSize="26"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="j8C-jk-PZe" secondAttribute="trailing" constant="75" id="09q-Y0-N6m"/>
+                <constraint firstItem="9rw-Lh-6UR" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="100" id="4td-va-FBQ"/>
+                <constraint firstItem="j8C-jk-PZe" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="75" id="JYu-rf-chb"/>
+                <constraint firstItem="j8C-jk-PZe" firstAttribute="centerX" secondItem="ZTg-uK-7eu" secondAttribute="centerX" id="U8N-zd-kGA"/>
+                <constraint firstAttribute="trailing" secondItem="9rw-Lh-6UR" secondAttribute="trailing" constant="10" id="YIu-lf-7aJ"/>
+                <constraint firstItem="9rw-Lh-6UR" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="mhC-ro-saz"/>
+                <constraint firstItem="j8C-jk-PZe" firstAttribute="top" secondItem="9rw-Lh-6UR" secondAttribute="bottom" constant="30" id="w1e-NK-AZs"/>
+            </constraints>
             <size key="customSize" width="233" height="157"/>
-            <point key="canvasLocation" x="223.66412213740458" y="69.366197183098592"/>
+            <point key="canvasLocation" x="222.90076335877862" y="69.014084507042256"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="homescreen-item" width="1411" height="745"/>
+    </resources>
 </document>
