--- a/DuplicatedApps/DuplicatedApps/Controller/SignUpScreen/SignUpViewController.xib
+++ b/DuplicatedApps/DuplicatedApps/Controller/SignUpScreen/SignUpViewController.xib
@@ -11,6 +11,9 @@
         <array key="Fontspring-DEMO-biennale-medium.otf">
             <string>FONTSPRINGDEMO-BiennaleMediumRegular</string>
         </array>
+        <array key="MADE Tommy Soft Medium PERSONAL USE.otf">
+            <string>MADETommySoft-Medium</string>
+        </array>
         <array key="TTHoves-DemiBold.ttf">
             <string>TTHoves-DemiBold</string>
         </array>
@@ -73,7 +76,7 @@
                             <rect key="frame" x="108" y="147.33333333333331" width="226" height="53"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <color key="textColor" red="0.71372549019999998" green="0.71372549019999998" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
-                            <fontDescription key="fontDescription" name="FONTSPRINGDEMO-BiennaleMediumRegular" family="FONTSPRING DEMO - Biennale Medium" pointSize="14"/>
+                            <fontDescription key="fontDescription" name="MADETommySoft-Medium" family="MADE Tommy Soft" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="signup-textfield-mail" translatesAutoresizingMaskIntoConstraints="NO" id="aR0-dm-Ctc">
@@ -123,7 +126,7 @@
                             <rect key="frame" x="108" y="333.33333333333337" width="226" height="53"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <color key="textColor" red="0.71372549019999998" green="0.71372549019999998" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
-                            <fontDescription key="fontDescription" name="FONTSPRINGDEMO-BiennaleMediumRegular" family="FONTSPRING DEMO - Biennale Medium" pointSize="14"/>
+                            <fontDescription key="fontDescription" name="MADETommySoft-Medium" family="MADE Tommy Soft" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login-textfield-key" translatesAutoresizingMaskIntoConstraints="NO" id="KKU-et-XrC">
@@ -160,7 +163,7 @@
                             <rect key="frame" x="108" y="240.33333333333331" width="226" height="53"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <color key="textColor" red="0.71372549019999998" green="0.71372549019999998" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
-                            <fontDescription key="fontDescription" name="FONTSPRINGDEMO-BiennaleMediumRegular" family="FONTSPRING DEMO - Biennale Medium" pointSize="14"/>
+                            <fontDescription key="fontDescription" name="MADETommySoft-Medium" family="MADE Tommy Soft" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fKi-ry-f4n">
