--- a/DuplicatedApps/DuplicatedApps/Controller/HomeScreen/HomeViewController.xib
+++ b/DuplicatedApps/DuplicatedApps/Controller/HomeScreen/HomeViewController.xib
@@ -8,11 +8,17 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Inter-LightItalic.otf">
+            <string>Inter-LightItalic</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="DuplicatedApps" customModuleProvider="target">
             <connections>
                 <outlet property="homeTableView" destination="07l-JK-pPa" id="gHJ-5F-N9f"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="welcomeUserLabel" destination="avQ-Wp-kl4" id="cjC-4B-o8r"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -21,20 +27,20 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello, Gustano" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="avQ-Wp-kl4">
-                    <rect key="frame" x="27" y="62" width="112" height="21"/>
-                    <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
-                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <rect key="frame" x="27" y="62" width="116.5" height="21"/>
+                    <fontDescription key="fontDescription" name="Inter-LightItalic" family="Inter" pointSize="17"/>
+                    <color key="textColor" red="0.9882352941176471" green="0.8666666666666667" blue="0.92549019607843142" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="homescreen-icon" translatesAutoresizingMaskIntoConstraints="NO" id="gjA-wj-ATC">
-                    <rect key="frame" x="345" y="50" width="49" height="44"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home-screen-avatar" translatesAutoresizingMaskIntoConstraints="NO" id="gjA-wj-ATC">
+                    <rect key="frame" x="345" y="63" width="49" height="44"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="2kZ-fJ-eH6"/>
                         <constraint firstAttribute="width" constant="49" id="x18-qT-tws"/>
                     </constraints>
                 </imageView>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="07l-JK-pPa">
-                    <rect key="frame" x="0.0" y="103" width="414" height="793"/>
+                    <rect key="frame" x="0.0" y="123" width="414" height="773"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </tableView>
             </subviews>
@@ -43,18 +49,18 @@
             <constraints>
                 <constraint firstItem="avQ-Wp-kl4" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="14" id="9J4-8I-vuu"/>
                 <constraint firstAttribute="bottom" secondItem="07l-JK-pPa" secondAttribute="bottom" id="DSh-hN-SPe"/>
-                <constraint firstItem="gjA-wj-ATC" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="2" id="Z1Y-Cm-ZN2"/>
+                <constraint firstItem="gjA-wj-ATC" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="15" id="Z1Y-Cm-ZN2"/>
                 <constraint firstItem="avQ-Wp-kl4" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="27" id="Z5S-Td-vRR"/>
                 <constraint firstItem="07l-JK-pPa" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="cPZ-mp-G1M"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="gjA-wj-ATC" secondAttribute="trailing" constant="20" id="h0l-c4-Atr"/>
                 <constraint firstItem="07l-JK-pPa" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="nJ1-ob-JB4"/>
-                <constraint firstItem="07l-JK-pPa" firstAttribute="top" secondItem="avQ-Wp-kl4" secondAttribute="bottom" constant="20" id="qSW-LT-NcC"/>
+                <constraint firstItem="07l-JK-pPa" firstAttribute="top" secondItem="gjA-wj-ATC" secondAttribute="bottom" constant="16" id="rRE-yU-MeN"/>
             </constraints>
             <point key="canvasLocation" x="65.217391304347828" y="-11.383928571428571"/>
         </view>
     </objects>
     <resources>
-        <image name="homescreen-icon" width="384" height="384"/>
+        <image name="home-screen-avatar" width="41" height="41"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
