--- a/DuplicatedApps/DuplicatedApps/Controller/HomeScreen/MostPopularApps/MostPopularAppsTableViewCell.xib
+++ b/DuplicatedApps/DuplicatedApps/Controller/HomeScreen/MostPopularApps/MostPopularAppsTableViewCell.xib
@@ -10,15 +10,42 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="139" id="KGk-i7-Jjw" customClass="MostPopularAppsTableViewCell" customModule="DuplicatedApps" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="139" height="139"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MostPopularAppsTableViewCell" rowHeight="114" id="KGk-i7-Jjw" customClass="MostPopularAppsTableViewCell" customModule="DuplicatedApps" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="148" height="101"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="139" height="139"/>
+                <rect key="frame" x="0.0" y="0.0" width="148" height="101"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="2oK-Uj-KTN">
+                        <rect key="frame" x="27" y="0.0" width="121" height="101"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="101" id="6ee-qD-K25"/>
+                        </constraints>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="11" minimumInteritemSpacing="0.0" id="Xnd-vB-NH4">
+                            <size key="itemSize" width="110" height="101"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                    </collectionView>
+                </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="2oK-Uj-KTN" secondAttribute="trailing" id="C6c-Q5-7nK"/>
+                    <constraint firstItem="2oK-Uj-KTN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="27" id="QwV-8r-OJn"/>
+                    <constraint firstAttribute="bottom" secondItem="2oK-Uj-KTN" secondAttribute="bottom" id="hk4-gx-eff"/>
+                    <constraint firstItem="2oK-Uj-KTN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="ui5-eN-GEs"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="0.76335877862595414" y="-38.380281690140848"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <connections>
+                <outlet property="collectionView" destination="2oK-Uj-KTN" id="nUe-EE-RIL"/>
+                <outlet property="collectionViewHeightConstraint" destination="6ee-qD-K25" id="515-qd-LYV"/>
+            </connections>
+            <point key="canvasLocation" x="19.847328244274809" y="-34.507042253521128"/>
         </tableViewCell>
     </objects>
 </document>
