--- a/DuplicatedApps/DuplicatedApps/Controller/HomeScreen/MostPopularApps/cell/MostPopularAppsCollectionViewCell.xib
+++ b/DuplicatedApps/DuplicatedApps/Controller/HomeScreen/MostPopularApps/cell/MostPopularAppsCollectionViewCell.xib
@@ -8,14 +8,14 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="Inter-BoldItalic.otf">
-            <string>Inter-BoldItalic</string>
+        <array key="Inter-MediumItalic.otf">
+            <string>Inter-MediumItalic</string>
         </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="MostPopularAppsCollectionViewCell" customModule="DuplicatedApps" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MostPopularAppsCollectionViewCell" id="gTV-IL-0wX" customClass="MostPopularAppsCollectionViewCell" customModule="DuplicatedApps" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="121" height="108"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -46,8 +46,8 @@
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q23-cb-Vik">
                                 <rect key="frame" x="12" y="69" width="97" height="19.666666666666671"/>
-                                <fontDescription key="fontDescription" name="Inter-BoldItalic" family="Inter" pointSize="16"/>
-                                <color key="textColor" white="0.0" alpha="0.80173841059602646" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="Inter-MediumItalic" family="Inter" pointSize="16"/>
+                                <color key="textColor" white="0.0" alpha="0.81115480132450335" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
