--- a/DuplicatedApps/DuplicatedApps/Controller/SignUpScreen/SignUpViewController.xib
+++ b/DuplicatedApps/DuplicatedApps/Controller/SignUpScreen/SignUpViewController.xib
@@ -36,6 +36,10 @@
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Illustration-signup" translatesAutoresizingMaskIntoConstraints="NO" id="6Yu-dX-E2F">
                     <rect key="frame" x="157.66666666666663" y="0.0" width="222.33333333333337" height="211"/>
                 </imageView>
+                <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="1xu-aI-e1o">
+                    <rect key="frame" x="0.0" y="211" width="390" height="633"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WMs-zg-42A">
                     <rect key="frame" x="0.0" y="211" width="390" height="633"/>
                     <subviews>
@@ -176,7 +180,7 @@
                             <state key="normal" backgroundImage="login-apple-button"/>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" red="0.13725490200000001" green="0.098039215690000001" blue="0.13725490200000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="aR0-dm-Ctc" firstAttribute="centerY" secondItem="J6N-8f-Rw1" secondAttribute="centerY" id="1bU-bh-55s"/>
                         <constraint firstItem="l4U-z7-yvA" firstAttribute="leading" secondItem="WMs-zg-42A" secondAttribute="leading" constant="56" id="1bi-Z8-DHg"/>
@@ -252,25 +256,38 @@
                         <constraint firstItem="T1f-bU-KQc" firstAttribute="leading" secondItem="9aB-F5-25o" secondAttribute="leading" id="zZn-NF-Y8P"/>
                     </constraints>
                 </view>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="signup-object" translatesAutoresizingMaskIntoConstraints="NO" id="ESs-Z1-pEW">
+                    <rect key="frame" x="0.0" y="0.0" width="390" height="311"/>
+                </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" red="0.082352941176470587" green="0.074509803921568626" blue="0.086274509803921567" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstAttribute="bottom" secondItem="1xu-aI-e1o" secondAttribute="bottom" id="8Ok-yc-AAx"/>
+                <constraint firstItem="1xu-aI-e1o" firstAttribute="top" secondItem="6Yu-dX-E2F" secondAttribute="bottom" id="8kU-DB-HSa"/>
                 <constraint firstItem="WMs-zg-42A" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="9Ws-Az-rW9"/>
+                <constraint firstItem="1xu-aI-e1o" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="A9T-2z-U8Q"/>
                 <constraint firstItem="WMs-zg-42A" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="6/8" id="Ci0-RK-f1Q"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="6Yu-dX-E2F" secondAttribute="trailing" constant="10" id="Fkb-Fl-PdP"/>
+                <constraint firstItem="ESs-Z1-pEW" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="IBQ-k1-rmM"/>
+                <constraint firstAttribute="trailing" secondItem="1xu-aI-e1o" secondAttribute="trailing" id="P08-Fv-Lx5"/>
+                <constraint firstItem="1xu-aI-e1o" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="6/8" id="SfD-U6-ONj"/>
+                <constraint firstItem="ESs-Z1-pEW" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Ttk-r8-reB"/>
+                <constraint firstItem="WMs-zg-42A" firstAttribute="top" secondItem="ESs-Z1-pEW" secondAttribute="bottom" constant="-100" id="Y0A-0a-ptn"/>
                 <constraint firstItem="6Yu-dX-E2F" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.57" id="dmI-18-cZu"/>
                 <constraint firstItem="6Yu-dX-E2F" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="2/8" id="hZU-Rl-pvc"/>
                 <constraint firstItem="WMs-zg-42A" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="iqF-jZ-O7Q"/>
                 <constraint firstAttribute="bottom" secondItem="WMs-zg-42A" secondAttribute="bottom" id="o6M-CU-KVd"/>
                 <constraint firstItem="WMs-zg-42A" firstAttribute="top" secondItem="6Yu-dX-E2F" secondAttribute="bottom" id="ohG-4u-m7C"/>
                 <constraint firstItem="6Yu-dX-E2F" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="wFI-NO-Utt"/>
+                <constraint firstItem="ESs-Z1-pEW" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="xp4-Yt-pyh"/>
             </constraints>
             <point key="canvasLocation" x="85.599999999999994" y="19.95073891625616"/>
         </view>
     </objects>
     <resources>
         <image name="Illustration-signup" width="855" height="952"/>
+        <image name="background" width="430" height="688"/>
         <image name="background-button" width="1256" height="200"/>
         <image name="background-textfield" width="1256" height="220"/>
         <image name="item_left_line" width="392" height="4"/>
@@ -278,6 +295,7 @@
         <image name="login-apple-button" width="233" height="176"/>
         <image name="login-textfield-key" width="74" height="74"/>
         <image name="login-textfield-person" width="70" height="67"/>
+        <image name="signup-object" width="430" height="385"/>
         <image name="signup-textfield-mail" width="76" height="60"/>
     </resources>
 </document>
